# tree-sitter-gotmpl

./: CMakeLists.txt  Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml
bindings/c/: tree-sitter-gotmpl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gotmpl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGoTmpl/: gotmpl.h
bindings/swift/TreeSitterGoTmplTests/: TreeSitterGoTmplTests.swift
extras/gotmpl-ts-mode/: gotmpl-ts-minor-mode.el  gotmpl-ts-mode.el  gotmpl-yaml-ts-mode.el
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: action.txt  argument.txt  command.txt  examples.txt  literal.txt  text.txt
