[package]
name = "tree-sitter-gotmpl"
description = "Golang text/template parser"
version = "0.2.0"
authors = ["Zachary Elliott <contact@zell.io>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gotmpl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/zellio/tree-sitter-gotmpl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
