[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-gotmpl"
description = "Golang text/template parser"
version = "0.2.0"
keywords = ["incremental", "parsing", "tree-sitter", "gotmpl"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Zachary Elliott", email = "contact@zell.io" }]
requires-python = ">=3.10"
license.text = "BSD-3-Clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/zellio/tree-sitter-gotmpl"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
